Revert adding "jdk.incubator.vector"